# Tiny-C-Compiler

./: .gitignore  CMakeLists.txt  README.md
notes/: grammar.md
src/: CMakeLists.txt  ast.cpp  ast.h  code_gen.cpp  code_gen.h  dictionary.cpp  dictionary.h  error.cpp  error.h  location.cpp  location.h  main.cpp  obj_gen.cpp  obj_gen.h  parser.cpp  parser.h  scanner.cpp  scanner.h  tcc.cpp  token.cpp  token.h  type.cpp  type.h  type_system.cpp  type_system.h
test/: CMakeLists.txt  ast.html  ast.json  ir  ir.ll  scanner_test.cpp  symbol  test.c  test.cpp  test.html  test.i  test.json  test.ll  test.s  token
visualization/: A_tree.json  disp.html
